SUBDIRS = .

AM_CPPFLAGS = -I. -I../include -I../include/laszip
noinst_LTLIBRARIES = liblibrary.la

liblibrary_la_SOURCES =				arithmeticmodel.cpp \
                        arithmeticmodel.hpp \
						arithmeticdecoder.cpp \
                        arithmeticdecoder.hpp \
						integercompressor.cpp \
                        integercompressor.hpp \
						lasreaditemcompressed_v1.cpp \
                        lasreaditemcompressed_v1.hpp \
						lasreaditemcompressed_v2.cpp \
                        lasreaditemcompressed_v2.hpp \
						lasreadpoint.cpp \
                        lasreadpoint.hpp \
                        bytestreamin.hpp \
                        bytestreamin_file.hpp \
                        bytestreamout.hpp \
                        lasreaditemraw.hpp \
                        lasreaditem.hpp \
                        laszip_common_v2.hpp \
                        mydefs.hpp \
						laszip.cpp \
                        lasreaditem.hpp
